Bug 243318 - Inbox gets NoSelect set when having server side subscription enabled
Summary: Inbox gets NoSelect set when having server side subscription enabled
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: Kevin Ottens
URL:
Keywords:
: 240602 246157 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-07-01 08:58 UTC by Volker Krause
Modified: 2010-08-17 11:02 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Krause 2010-07-01 08:58:38 UTC
Version:           unspecified (using Devel) 
OS:                Linux

With server side subscription enabled some servers (including Cyrus) change the folder listing order and no longer do a strict top-down listing (which is what the IMAP resource currently expects). This causes the IMAP resource to fill in the missing hierarchy with structural folders (NoContent flag set), which then prevents content listing of those folders.

Reproducible: Sometimes

Steps to Reproduce:
Create a new IMAP account for a Cyrus/Kolab server and enable server-side subscription.

Actual Results:  
Inbox (and potentially other folders) have the NoContent attribute set to 1, preventing subsequent folder listing.


see the isDummy == true case in ImapResource::onMailBoxesReceived(), possible solution would be to not use streaming for collection listing and build up the full tree in memory first. Alternatively, and much more complicated, we could extend CollectionSync to accept updates of already received collections later on in streaming mode.
Comment 1 András Manţia 2010-07-28 13:00:07 UTC
I tried and cannot reproduce with trunk and the demo kolab server. Might have been fixed with rev1152264 ?
Comment 2 Volker Krause 2010-07-30 09:06:10 UTC
Still reproduceable with revision 1152264, closer inspection of that commit shows it's unrelated anyway.
Comment 3 Volker Krause 2010-08-02 08:59:08 UTC
*** Bug 240602 has been marked as a duplicate of this bug. ***
Comment 4 Kevin Ottens 2010-08-02 11:31:15 UTC
SVN commit 1158203 by ervin:

Merged revisions 1156785,1157161,1157175 via svnmerge from 
svn+ssh://ervin@svn.kde.org/home/kde/trunk/KDE/kdepim/runtime/resources/imap

(r1157161 actually fixes BR 243318)
BUG: 243318

................
  r1156785 | tokoe | 2010-07-29 19:29:40 +0200 (Thu, 29 Jul 2010) | 13 lines
  
  Merged revisions 1156016,1156751 via svnmerge from 
  svn+ssh://tokoe@svn.kde.org/home/kde/branches/KDE/4.5/kdepim
  
  ........
    r1156016 | tokoe | 2010-07-28 14:46:42 +0200 (Wed, 28 Jul 2010) | 2 lines
    
    Do not ask for password when authentication mode is GSSAPI
  ........
    r1156751 | tokoe | 2010-07-29 18:35:13 +0200 (Thu, 29 Jul 2010) | 2 lines
    
    Some more check for not asking for kwallet when using GSSAPI authentication
  ........
................
  r1157161 | amantia | 2010-07-30 13:22:41 +0200 (Fri, 30 Jul 2010) | 4 lines
  
  Accept bottom-up listing order from the IMAP server (if we receive a folder that was created as a dummy parent, make it non-dummy, including being selectable, listable).
  
  CCBUG: 242686
................
  r1157175 | vkrause | 2010-07-30 14:02:27 +0200 (Fri, 30 Jul 2010) | 3 lines
  
  Make sure the D-Bus settings interface is available early enough, the account
  wizard fails otherwise.
................


 _M            . (directory)  
 M  +2 -0      imapresource.cpp  
 U             imapresource.h  
 M  +21 -1     retrievecollectionstask.cpp  
 M  +1 -0      retrievecollectionstask.h  
 M  +8 -0      sessionpool.cpp  
 M  +8 -2      settings.cpp  
 M  +3 -1      settingspasswordrequester.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1158203
Comment 5 Volker Krause 2010-08-17 11:02:10 UTC
*** Bug 246157 has been marked as a duplicate of this bug. ***