Merged revisions 1156785,1157161,1157175 via svnmerge from svn+ssh://ervin@svn.kde.org/home/kde/trunk/KDE/kdepim/runtime/resources/imap

(r1157161 actually fixes BR 243318)
BUG: 243318

................
  r1156785 | tokoe | 2010-07-29 19:29:40 +0200 (Thu, 29 Jul 2010) | 13 lines
  
  Merged revisions 1156016,1156751 via svnmerge from 
  svn+ssh://tokoe@svn.kde.org/home/kde/branches/KDE/4.5/kdepim
  
  ........
    r1156016 | tokoe | 2010-07-28 14:46:42 +0200 (Wed, 28 Jul 2010) | 2 lines
    
    Do not ask for password when authentication mode is GSSAPI
  ........
    r1156751 | tokoe | 2010-07-29 18:35:13 +0200 (Thu, 29 Jul 2010) | 2 lines
    
    Some more check for not asking for kwallet when using GSSAPI authentication
  ........
................
  r1157161 | amantia | 2010-07-30 13:22:41 +0200 (Fri, 30 Jul 2010) | 4 lines
  
  Accept bottom-up listing order from the IMAP server (if we receive a folder that was created as a dummy parent, make it non-dummy, including being selectable, listable).
  
  CCBUG: 242686
................
  r1157175 | vkrause | 2010-07-30 14:02:27 +0200 (Fri, 30 Jul 2010) | 3 lines
  
  Make sure the D-Bus settings interface is available early enough, the account
  wizard fails otherwise.
................

svn path=/branches/work/~ervin/imap-resource-refactor/retrievecollectionstask.h; revision=1158203